update connection protocol to work with any providers using OpenAI API format

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,13 @@
-# Github PAT (with Models read access)
-GITHUB_TOKEN=github_pat_token_here
+# OpenAI API-compatible endpoint
+# Examples:
+# - GitHub Models: https://models.inference.ai.azure.com
+# - Groq: https://api.groq.com/openai/v1
+# - Ollama: http://localhost:11434/v1
+LLM_BASE_URL=https://models.inference.ai.azure.com
 
-# Endpoint for GitHub Models
-GITHUB_MODELS_ENDPOINT=https://models.inference.ai.azure.com
+# API key for the provider (not needed for Ollama)
+# Leave empty or omit for Ollama, it defaults to "ollama"
+API_KEY=your_api_key_here
 
-#Recommended Model for RLM Logic
-RLM_MODEL=gpt-4o
+# Model name (check your provider's available models)
+LLM_MODEL=gpt-4o
